# mimir

./: .gitignore  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  DEVELOPMENT.md  GETTING_STARTED.md  Makefile  README.md  REFACTORING_PLAN.md  tarpaulin.toml
crates/mimir-5etools-splitter/: Cargo.toml
crates/mimir-5etools-splitter/src/: archive.rs  collector.rs  filter.rs  images.rs  input.rs  lib.rs  load_tester.rs  magic_variants.rs  main.rs  parallel.rs  parser.rs  repo.rs  srd_collector.rs  srd_filter.rs
crates/mimir-dm/: Cargo.toml  README.md  build.rs  tauri.conf.json
crates/mimir-dm-agents/: Cargo.toml  README.md
crates/mimir-dm-agents/src/: framework.rs  lib.rs  npc.rs
crates/mimir-dm-ai/: Cargo.toml  README.md
crates/mimir-dm-ai/src/: lib.rs  ollama.rs
crates/mimir-dm-core/: Cargo.toml  README.md
crates/mimir-dm-core/examples/: load_templates.rs
crates/mimir-dm-core/migrations/0002_create_sources/: up.sql
crates/mimir-dm-core/migrations/0003_create_races/: down.sql  up.sql
crates/mimir-dm-core/migrations/0004_create_classes/: down.sql
crates/mimir-dm-core/migrations/0005_create_items/: down.sql  up.sql
crates/mimir-dm-core/migrations/0006_create_backgrounds/: down.sql  up.sql
crates/mimir-dm-core/migrations/0007_create_feats/: up.sql
crates/mimir-dm-core/migrations/0008_create_spells/: down.sql
crates/mimir-dm-core/migrations/0009_create_creatures/: down.sql
crates/mimir-dm-core/migrations/0011_create_modules/: up.sql
crates/mimir-dm-core/migrations/031_create_players_and_characters/: up.sql
crates/mimir-dm-core/migrations/036_create_maps/: up.sql
crates/mimir-dm-core/src/: config.rs  connection.rs  db.rs  error.rs  lib.rs  schema.rs  traits.rs  types.rs
crates/mimir-dm-core/src/dal/: mod.rs  traits.rs
crates/mimir-dm-core/src/domain/: mod.rs  template_info.rs
crates/mimir-dm-core/src/models/: board.rs  campaign.rs  enums.rs  ids.rs  mod.rs  module.rs  rules.rs  rules_extended.rs  session.rs
crates/mimir-dm-core/src/seed/: dev_seeder.rs  mod.rs  template_loader.rs  template_seeder.rs
crates/mimir-dm-core/src/services/: action_service.rs  background_service.rs  campaign_service.rs  catalog_service.rs  class_service.rs  condition_service.rs  cult_service.rs  deity_service.rs  document_service.rs  feat_service.rs  item_service.rs  language_service.rs  map_service.rs  mod.rs  module_monster_service.rs  module_service.rs  module_service_tests.rs  monster_renderer.rs  monster_service.rs  object_service.rs  optional_feature_service.rs  player_service.rs  psionic_service.rs  race_service.rs  reference_service.rs  reward_service.rs  session_service.rs  spell_service.rs  table_service.rs  template_service.rs  token_service.rs  trap_service.rs  variant_rule_service.rs  vehicle_service.rs
crates/mimir-dm-core/tests/: integration_test.rs  module_service_tests.rs
crates/mimir-dm-core/tests/integrations/: main.rs
crates/mimir-dm-db/: Cargo.toml  README.md  diesel.toml
crates/mimir-dm-db/migrations/00000000000000_diesel_initial_setup/: up.sql
crates/mimir-dm-db/migrations/0001_create_rule_systems/: down.sql  up.sql
crates/mimir-dm-db/migrations/0002_create_sources/: down.sql  up.sql
crates/mimir-dm-db/migrations/0004_create_classes/: up.sql
crates/mimir-dm-db/migrations/0007_create_feats/: down.sql
crates/mimir-dm-db/migrations/0008_create_spells/: up.sql
crates/mimir-dm-db/migrations/0009_create_creatures/: up.sql
crates/mimir-dm-db/migrations/0010_create_campaigns/: up.sql
crates/mimir-dm-db/migrations/2025-07-28-000001_create_core_tables/: down.sql  up.sql
crates/mimir-dm-db/migrations/2025-07-28-000002_create_search_tables/: down.sql  up.sql
crates/mimir-dm-db/src/: connection.rs  connection_test.rs  error.rs  lib.rs  schema.rs  search.rs  storage.rs
crates/mimir-dm-db/src/dal/: backgrounds.rs  campaigns.rs  classes.rs  creatures.rs  documents.rs  feats.rs  items.rs  mod.rs  modules.rs  races.rs  rule_systems.rs  sessions.rs  sources.rs  spells.rs  template_documents.rs  traits.rs  workflow_cards.rs
crates/mimir-dm-db/src/domain/: mod.rs
crates/mimir-dm-db/src/json_types/: mod.rs
crates/mimir-dm-db/src/models/: backgrounds.rs  campaign.rs  campaigns.rs  embedding.rs  mod.rs  modules.rs  npc.rs  plot.rs  races.rs  rule.rs  rule_systems.rs  session.rs  sessions.rs  sources.rs  spells.rs  template_documents.rs  template_frontmatter.rs  workflow_cards.rs
crates/mimir-dm-db/src/seed/: mod.rs  template_loader.rs  template_seeder.rs
crates/mimir-dm-db/src/services/: campaign_service.rs  mod.rs  template_service.rs
crates/mimir-dm-db/tests/: integration_test.rs
crates/mimir-dm-db/tests/integrations/: main.rs
crates/mimir-dm-import/: Cargo.toml  README.md
crates/mimir-dm-import/src/: bundle.rs  error.rs  importer.rs  lib.rs  manifest.rs  progress.rs
crates/mimir-dm-import/tests/: bundle_tests.rs  import_tests.rs  real_bundle_test.rs
crates/mimir-dm-import/tests/common/: mod.rs
crates/mimir-dm-llm/: Cargo.toml  README.md
crates/mimir-dm-llm/src/: config.rs  lib.rs  provider.rs
crates/mimir-dm-llm/src/providers/: groq.rs  mod.rs  ollama.rs  openai_compat.rs
crates/mimir-dm-llm/src/tools/: examples.rs  file_tools.rs  mod.rs  todo_tool.rs
crates/mimir-dm-llm/src/traits/: context.rs  mod.rs  tool.rs  (+1 more)
crates/mimir-dm-llm/tests/: main.rs  model_management.rs  ollama.rs
crates/mimir-dm-print/: Cargo.toml
crates/mimir-dm-print/src/: campaign.rs  lib.rs  markdown.rs  service.rs  world.rs
crates/mimir-dm-tui/: Cargo.toml  README.md
crates/mimir-dm-tui/src/: app.rs  lib.rs  ui.rs
crates/mimir-dm/agent_tasks/: catalog_tasks.json  character_tasks.json  continuity_tasks.json  edge_cases.json  knowledge_tasks.json  module_tasks.json  multi_step.json
crates/mimir-dm/frontend/: MIGRATION.md  index.html  package-lock.json  package.json  rules.html  tsconfig.json  tsconfig.tsbuildinfo  vite.config.ts
crates/mimir-dm/src/: app_init.rs  db_connection.rs  embedded_rules.rs  embedded_test_book.rs  main.rs  rules_init.rs  seed_templates.rs  state.rs  types.rs
crates/mimir-dm/tests/: llm_integration.rs
(+1164 files in other folders)
