[package]
name = "mimir-dm"
version = "0.0.0"
edition = "2021"
description = "A local-first D&D campaign assistant for Dungeon Masters"
authors = ["Your Name <your.email@example.com>"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/yourusername/mimir"
keywords = ["dnd", "rpg", "campaign", "dungeon-master", "tui"]
categories = ["games", "command-line-utilities"]
readme = "README.md"
exclude = [
    "target/",
    ".metis/",
    "GETTING_STARTED.md",
    "*.log"
]

[[bin]]
name = "mimir-dm"
path = "src/main.rs"

[dependencies]
mimir-dm-core = { version = "0.0.0", path = "crates/mimir-dm-core" }
mimir-dm-db = { version = "0.0.0", path = "crates/mimir-dm-db" }
mimir-dm-ai = { version = "0.0.0", path = "crates/mimir-dm-ai" }
mimir-dm-agents = { version = "0.0.0", path = "crates/mimir-dm-agents" }
mimir-dm-tui = { version = "0.0.0", path = "crates/mimir-dm-tui" }

tokio = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
config = { workspace = true }
directories = { workspace = true }

[workspace]
members = [
    "crates/mimir-dm-core",
    "crates/mimir-dm-db", 
    "crates/mimir-dm-ai",
    "crates/mimir-dm-agents",
    "crates/mimir-dm-tui"
]
resolver = "2"

[workspace.dependencies]
# Core dependencies
tokio = { version = "1.0", features = ["full"] }
anyhow = "1.0"
thiserror = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.0", features = ["v4"] }

# Database dependencies
rusqlite = { version = "0.30", features = ["bundled", "functions"] }
diesel = { version = "2.1", features = ["sqlite", "chrono", "uuid"] }
diesel_migrations = "2.1"

# HTTP client for Ollama
reqwest = { version = "0.11", features = ["json", "stream"] }
futures = "0.3"

# TUI dependencies  
ratatui = "0.24"
crossterm = "0.27"

# Time handling
chrono = { version = "0.4", features = ["serde"] }

# Configuration
config = "0.14"
directories = "5.0"

[profile.dev]
opt-level = 0
debug = true

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"