[workspace]
members = [
    "crates/mimir-dm",
    "crates/mimir-dm-core", 
    "crates/mimir-dm-llm",
    "crates/mimir-5etools-splitter"
]
resolver = "2"

[workspace.dependencies]
# Core dependencies
tokio = { version = "1.0", features = ["full"] }
anyhow = "1.0"
thiserror = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-appender = "0.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.0", features = ["v4", "serde"] }

# Database dependencies
rusqlite = { version = "0.31.0", features = ["bundled"] }
diesel = { version = "2.1", features = ["sqlite", "chrono", "uuid", "64-column-tables", "returning_clauses_for_sqlite_3_35"] }
diesel_migrations = "2.1"
sqlite-vec = { version = "0.1.6" }
zerocopy = "0.7.33"

# HTTP client for Ollama
reqwest = { version = "0.11", features = ["json", "stream"] }
futures = "0.3"
async-trait = "0.1"
serde_yaml = "0.9"
url = "2.5"

# TUI dependencies  
ratatui = "0.24"
crossterm = "0.27"

# Time handling
chrono = { version = "0.4", features = ["serde"] }

# Configuration
config = "0.14"
directories = "5.0"
dirs = "5.0"

# Template engine
tera = "1.19"

# Frontmatter parsing
gray_matter = "0.3"

# Cryptography
sha2 = "0.10"

# CLI
clap = { version = "4.0", features = ["derive"] }

# Tauri
tauri = { version = "2" }
tauri-build = { version = "2" }

[profile.dev]
opt-level = 0
debug = true

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"