[workspace]
members = [
    "crates/mimir-dm",
    "crates/mimir-dm-core",
    "crates/mimir-dm-llm",
    "crates/mimir-dm-print",
    "crates/mimir-5etools-splitter",
    "crates/mimir-llm-eval"
]
resolver = "2"

[workspace.dependencies]
# Core dependencies
tokio = { version = "1.37", features = ["full"] }
tokio-util = "0.7"
anyhow = "1.0"
thiserror = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-appender = "0.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.10", features = ["v4", "serde"] }
regex = "1.10"
similar = "2.6"

# Database dependencies
rusqlite = { version = "0.31.0", features = ["bundled"] }
diesel = { version = "2.1", features = ["sqlite", "chrono", "uuid", "64-column-tables", "returning_clauses_for_sqlite_3_35", "r2d2"] }
diesel_migrations = "2.1"
r2d2 = "0.8"
sqlite-vec = { version = "0.1.6" }
zerocopy = "0.7.33"

# HTTP client for Ollama
reqwest = { version = "0.12", features = ["json", "stream"] }
futures = "0.3"
async-trait = "0.1"
serde_yaml = "0.9"
url = "2.5"

# TUI dependencies  
ratatui = "0.24"
crossterm = "0.27"

# Time handling
chrono = { version = "0.4", features = ["serde"] }

# Configuration
config = "0.14"
directories = "5.0"
dirs = "5.0"

# Template engine
tera = "1.19"

# Frontmatter parsing
gray_matter = "0.3"

# Markdown parsing
pulldown-cmark = "0.12"

# Cryptography
sha2 = "0.10"

# CLI
clap = { version = "4.0", features = ["derive"] }

# File handling
walkdir = "2.5"
flate2 = "1.0"
tar = "0.4"
base64 = "0.22.1"

# Parallel processing
rayon = "1.10"

# Macros
paste = "1.0"

# Testing
tempfile = "3.10"

# Tauri
tauri = { version = "2" }
tauri-build = { version = "2" }

[profile.dev]
opt-level = 0
debug = true

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"