[package]
name = "mimir-5etools-splitter"
version = "0.1.0"
edition = "2021"
authors = ["Mimir Contributors"]
description = "Splits 5etools repositories into book-specific archives"
license = "MIT OR Apache-2.0"

[[bin]]
name = "mimir-5esplit"
path = "src/main.rs"

[[bin]]
name = "mimir-5etest"
path = "src/bin/load_test.rs"

[dependencies]
anyhow = "1.0"
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4.5", features = ["derive"] }
flate2 = "1.0"
indicatif = "0.17"
rayon = "1.10"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tar = "0.4"
tempfile = "3.10"
tokio = { version = "1.37", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
walkdir = "2.5"
regex = "1.10"

# Load tester dependencies
mimir-dm-core = { path = "../mimir-dm-core" }
diesel = { version = "2.1", features = ["sqlite", "chrono"] }
diesel_migrations = "2.1"
colored = "2.0"

[dev-dependencies]
tempdir = "0.3"