[package]
name = "mimir-dm-agents"
version = "0.0.0"
edition = "2021"
description = "Agent framework and implementations for Mimir"
authors = ["Your Name <your.email@example.com>"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/yourusername/mimir"
readme = "README.md"

[dependencies]
mimir-dm-core = { version = "0.0.0", path = "../mimir-dm-core" }
mimir-dm-db = { version = "0.0.0", path = "../mimir-dm-db" }
mimir-dm-ai = { version = "0.0.0", path = "../mimir-dm-ai" }

tokio = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
serde = { workspace = true }
uuid = { workspace = true }
futures = { workspace = true }