[package]
name = "mimir-dm-core"
version = "0.0.0"
edition = "2021"
description = "Core types and traits for Mimir D&D Campaign Assistant"
readme = "README.md"
authors = ["Your Name <your.email@example.com>"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/yourusername/mimir"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
thiserror = "1.0"
anyhow = "1.0"
uuid = { version = "1.0", features = ["serde", "v4"] }
async-trait = "0.1"
futures = "0.3"
