[package]
name = "mimir-dm-core"
version = "0.0.2"
edition = "2021"
description = "Core business logic, domain models, and data persistence for Mimir"
authors = ["Your Name <your.email@example.com>"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/colliery-io/mimir"
readme = "README.md"

[dependencies]
mimir-dm-llm = { version = "0.0.2", path = "../mimir-dm-llm" }

tokio = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
tera = { workspace = true }
gray_matter = { workspace = true }
sha2 = { workspace = true }
rusqlite = { workspace = true }
diesel = { workspace = true }
diesel_migrations = { workspace = true }
r2d2 = { workspace = true }
sqlite-vec = { workspace = true }
zerocopy = { workspace = true }
async-trait = { workspace = true }
futures = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
env_logger = "0.10"

