[package]
name = "mimir-dm-import"
version = "0.0.0"
edition = "2021"
description = "Bundle import functionality for Mimir D&D campaign assistant"
authors = ["Mimir Team"]
license = "MIT OR Apache-2.0"

[dependencies]
# Workspace crates
mimir-dm-core = { version = "0.0.0", path = "../mimir-dm-core" }
mimir-dm-db = { version = "0.0.0", path = "../mimir-dm-db" }

# Core dependencies
tokio = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }

# Archive handling
flate2 = "1.0"
tar = "0.4"

# Progress reporting
indicatif = "0.17"

# Path handling
path-clean = "1.0"

[dev-dependencies]
tempfile = "3.0"
tokio-test = "0.4"
diesel = { workspace = true }
diesel_migrations = { workspace = true }