[package]
name = "mimir-dm-llm"
version = "0.0.0"
edition = "2021"
description = "LLM provider abstraction layer for Mimir"
authors = ["Your Name <your.email@example.com>"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/yourusername/mimir"
readme = "README.md"

[dependencies]
tokio = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
reqwest = { workspace = true }
futures = { workspace = true }
async-trait = { workspace = true }
chrono = { workspace = true }
serde_yaml = "0.9"
url = "2.5"

[dev-dependencies]
tempfile = "3.0"