[package]
name = "mimir-dm-tui"
version = "0.0.0"
edition = "2021"
description = "Terminal user interface for Mimir"
authors = ["Your Name <your.email@example.com>"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/yourusername/mimir"
readme = "README.md"

[dependencies]
mimir-dm-core = { version = "0.0.0", path = "../mimir-dm-core" }
mimir-dm-agents = { version = "0.0.0", path = "../mimir-dm-agents" }

tokio = { workspace = true }
anyhow = { workspace = true }
ratatui = { workspace = true }
crossterm = { workspace = true }