[package]
name = "mimir-dm"
version = "0.0.0"
edition = "2021"
description = "Mimir D&D Campaign Assistant - Desktop Application"
authors = ["Mimir Team"]
license = "MIT OR Apache-2.0"

[[bin]]
name = "mimir"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
# Tauri
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"

# Core dependencies
serde = { workspace = true }
serde_json = { workspace = true }

# Remove TUI dependencies since we're going GUI
# config = { workspace = true }
# directories = { workspace = true }
# clap = { workspace = true }

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
