[package]
name = "mimir-dm"
version = "0.0.0"
edition = "2021"
description = "Mimir D&D Campaign Assistant - Desktop Application"
authors = ["Mimir Team"]
license = "MIT OR Apache-2.0"

[[bin]]
name = "mimir"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
# Tauri
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
tauri-plugin-dialog = "2"

# Our crates
mimir-dm-core = { version = "0.0.0", path = "../mimir-dm-core" }
mimir-dm-llm = { version = "0.0.0", path = "../mimir-dm-llm" }

# Core dependencies
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
directories = { workspace = true }
diesel = { workspace = true, features = ["r2d2"] }
r2d2 = "0.8"
chrono = { workspace = true }
tera = "1.19"
thiserror = { workspace = true }
tokio = { workspace = true }
base64 = "0.22.1"
tar = "0.4"
flate2 = "1.0"
tempfile = "3.10"
walkdir = "2.5"
async-trait.workspace = true
uuid = { version = "1.10", features = ["v4", "serde"] }

# Remove TUI dependencies since we're going GUI
# config = { workspace = true }
# directories = { workspace = true }
# clap = { workspace = true }

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]

[dev-dependencies]
tempfile = "3.0"
tokio = { workspace = true, features = ["test-util", "macros"] }
