[package]
name = "mimir-dm"
version = "0.0.0"
edition = "2021"
description = "Mimir D&D Campaign Assistant - Desktop Application"
authors = ["Mimir Team"]
license = "MIT OR Apache-2.0"

[[bin]]
name = "mimir"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
# Tauri
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
tauri-plugin-dialog = "2"

# Our crates
mimir-dm-core = { version = "0.0.0", path = "../mimir-dm-core" }
mimir-dm-llm = { version = "0.0.0", path = "../mimir-dm-llm" }

# Core dependencies
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
tracing-appender = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
directories = { workspace = true }
diesel = { workspace = true, features = ["r2d2"] }
r2d2 = { workspace = true }
chrono = { workspace = true }
tera = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tokio-util = { workspace = true }
base64 = { workspace = true }
tar = { workspace = true }
flate2 = { workspace = true }
tempfile = { workspace = true }
walkdir = { workspace = true }
async-trait.workspace = true
uuid = { workspace = true }
similar = { workspace = true }
reqwest = { workspace = true }

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]

[dev-dependencies]
tempfile = { workspace = true }
tokio = { workspace = true, features = ["test-util", "macros"] }
